BUILD SCRIPT ONLY: Detect the java version on windows